--- a/platforms/ios/Fabric/Fabric-Info.plist
+++ b/platforms/ios/Fabric/Fabric-Info.plist
@@ -48,6 +48,12 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+	  <!--Include to allow all connections -->
+	  <key>NSAllowsArbitraryLoads</key>
+	      <true/>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.trailerpop.fabric</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -71,7 +77,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>6</string>
+	<string>7</string>
 	<key>FacebookAppID</key>
 	<string>908540922496603</string>
 	<key>FacebookDisplayName</key>
