--- a/platforms/ios/Fabric/Fabric-Info.plist
+++ b/platforms/ios/Fabric/Fabric-Info.plist
@@ -57,7 +57,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.6.4</string>
+	<string>1.6.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -71,11 +71,18 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>9</string>
+	<string>2</string>
 	<key>FacebookAppID</key>
 	<string>908540922496603</string>
 	<key>FacebookDisplayName</key>
 	<string>Fabric</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>spotify</string>
+		<string>nflx</string>
+		<string>aiv</string>
+		<string>fbauth</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
